DEVOPS-5369: Adding develop branch and jobs definition

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
     <name>Sonar R Plugin</name>
     <description>SonarQube plugin for R language</description>
 
+    <properties>
+        <artifacts.repository.name>gin-common</artifacts.repository.name>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.sonarsource.sonarqube</groupId>
