--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.merck.gin.common</groupId>
-        <artifactId>msd-main-parent</artifactId>
-        <version>0.4.2</version>
-    </parent>
-
     <groupId>com.msd.gin.common.sonar</groupId>
     <artifactId>sonar-r-plugin</artifactId>
     <version>0.1.3-SNAPSHOT</version>
@@ -36,7 +30,9 @@
     <inceptionYear>2018</inceptionYear>
 
     <properties>
-        <artifacts.repository.name>gin-common</artifacts.repository.name>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
