--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,8 @@
 language: java
-sudo: false
 
 jdk:
-- oraclejdk8
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
-
-install: true
-script: mvn verify -B -e -V
-
-matrix:
-  fast_finish: true
+- openjdk8
 
 cache:
   directories:
     - '$HOME/.m2/repository'
-
-notifications:
-  email: false
