--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ deploy:
   file: target/sonar-r-plugin-$project_version.jar
   on:
     repo: Merck/sonar-r-plugin
-    branch: github-master
+    branch: master
