Add coverage sample using generic SonarQube coverage support

--- a/sample-project/sonar-project.properties
+++ b/sample-project/sonar-project.properties
@@ -16,6 +16,9 @@
 #
 
 sonar.projectKey=com.msd.gin.common.sonar.r:sample-project
-sonar.sources=.
+sonar.sources=R/
+sonar.tests=tests/
 sonar.host.url=http://localhost:9000
 sonar.sourceEncoding=UTF-8
+
+sonar.coverageReportPaths=covr_sonarqube.xml
