--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>com.msd.gin.common.sonar</groupId>
     <artifactId>sonar-r-plugin</artifactId>
-    <version>0.1.4-SNAPSHOT</version>
+    <version>0.1.4</version>
     <packaging>sonar-plugin</packaging>
 
     <name>Sonar R Plugin</name>
