--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.msd.gin.common.sonar</groupId>
@@ -113,6 +114,11 @@
                         </argLine>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -144,7 +150,8 @@
                         <phase>package</phase>
                         <configuration>
                             <target>
-                                <copy file="${project.basedir}/target/${project.artifactId}-${project.version}.jar" tofile="${project.basedir}/.sonar/sonarqube-7.9.1/extensions/plugins/${project.artifactId}-${project.version}.jar" />
+                                <copy file="${project.basedir}/target/${project.artifactId}-${project.version}.jar"
+                                      tofile="${project.basedir}/.sonar/sonarqube-7.9.1/extensions/plugins/${project.artifactId}-${project.version}.jar"/>
                             </target>
                         </configuration>
                         <goals>
