--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
         </dependency>
+         <!-- Tests -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
