--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
                         <configuration>
                             <target>
                                 <copy file="${project.basedir}/target/${project.artifactId}-${project.version}.jar"
-                                      tofile="${project.basedir}/.sonar/sonarqube-7.9.1/extensions/plugins/${project.artifactId}-${project.version}.jar"/>
+                                      tofile="${project.basedir}/.sonar/sonarqube-8.9.8.54436/extensions/plugins/${project.artifactId}-${project.version}.jar"/>
                             </target>
                         </configuration>
                         <goals>
