--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,19 +1,16 @@
 name: Maven Package
-
 on:
   push:
     branches-ignore: [master]
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - uses: actions/checkout@v4
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '11'
           distribution: 'temurin'
-
-      - name: Build with Maven
-        run: ./mvnw -B package
+      - name: Package with Maven
+        run: ./mvnw --batch-mode package
