Add worfklow for master branch and publish package into Git packages

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/kmoco2am/sonar-r-plugin</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <pluginManagement>
             <plugins>
