--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
+
+        <sonar.apiVersion>9.8.0.203</sonar.apiVersion>
+        <sonar.testingHarnessVersion>9.9.2.77730</sonar.testingHarnessVersion>
 
         <source.plugin.version>3.2.1</source.plugin.version>
-        <compiler.plugin.version>3.8.1</compiler.plugin.version>
+        <compiler.plugin.version>3.10.1</compiler.plugin.version>
         <jar.plugin.version>3.2.0</jar.plugin.version>
         <clean.plugin.version>3.1.0</clean.plugin.version>
         <install.plugin.version>3.0.0-M1</install.plugin.version>
@@ -46,6 +49,7 @@
         <surefire.plugin.version>3.0.0-M6</surefire.plugin.version>
         <!-- JaCoCo Properties -->
         <jacoco.version>0.8.8</jacoco.version>
+        <sonar.sources>src/main/java,src/main/js</sonar.sources>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
@@ -54,16 +58,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.sonarsource.sonarqube</groupId>
+            <groupId>org.sonarsource.api.plugin</groupId>
             <artifactId>sonar-plugin-api</artifactId>
-            <!-- minimal version of SonarQube to support -->
-            <version>6.7</version>
+            <version>${sonar.apiVersion}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.2</version>
+            <version>2.8.9</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -75,6 +78,18 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sonarsource.sonarqube</groupId>
+            <artifactId>sonar-testing-harness</artifactId>
+            <version>${sonar.testingHarnessVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sonarsource.sonarqube</groupId>
+            <artifactId>sonar-plugin-api-impl</artifactId>
+            <version>${sonar.testingHarnessVersion}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -162,7 +177,7 @@
             <plugin>
                 <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
                 <artifactId>sonar-packaging-maven-plugin</artifactId>
-                <version>1.17</version>
+                <version>1.21.0.505</version>
                 <extensions>true</extensions>
                 <configuration>
                     <!-- the entry-point class that extends org.sonar.api.SonarPlugin -->
@@ -173,7 +188,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
