--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.language>java</sonar.language>
     </properties>
 
@@ -159,6 +160,9 @@
                     <version>${jacoco.version}</version>
                     <configuration>
                         <propertyName>surefire.argLine</propertyName>
+                        <formats>
+                            <format>XML</format>
+                        </formats>
                     </configuration>
                 </plugin>
                 <plugin>
